cabal-version: 2.4
name:           wai-sample
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/igrep/wai-sample#readme>
homepage:       https://github.com/igrep/wai-sample#readme
bug-reports:    https://github.com/igrep/wai-sample/issues
author:         YAMAMOTO Yuji
maintainer:     whosekiteneverfly@gmail.com
copyright:      2020 YAMAMOTO Yuji
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common common
  build-depends:
      base >=4.7 && <5
    , bytestring
    , http-types
    , mtl
    , text
    , wai
    , warp
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/igrep/wai-sample

library
  import: common
  exposed-modules:
      WaiSample
      WaiSample.Types
      WaiSample.Server
      WaiSample.Client
      WaiSample.Client.Sample
  other-modules:
      WaiSample.Routes
      WaiSample.Types.Response
      WaiSample.Types.ContentTypes
      WaiSample.Types.Status
  hs-source-dirs:
      src
  build-depends:
      aeson >= 2.0
    , attoparsec
    , case-insensitive
    , errors
    , lift-type
    , http-media
    , http-api-data
    , http-conduit
    , safe
    , template-haskell
    , uri-encode

executable wai-sample-exe
  import: common
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      wai-sample
    , warp

executable wai-sample-client
  import: common
  main-is: run-client.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      wai-sample
  default-language: Haskell2010

test-suite wai-sample-test
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      WaiSampleSpec
      WaiSample.ClientSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      wai-sample
    , sydtest
    , wai-extra
    , QuickCheck
  build-tool-depends:
      sydtest-discover:sydtest-discover
